samples/_failures_safe/1761164554_45675b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9cfb95b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d9cfb95b.c:172:19: error: expected ‘;’ at end of input
  172 |             column
      |                   ^
      |                   ;
./samples/SAFE/__tmp_d9cfb95b.c:172:13: error: expected declaration or statement at end of input
  172 |             column
      |             ^~~~~~
./samples/SAFE/__tmp_d9cfb95b.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d9cfb95b.c:172:13: error: expected declaration or statement at end of input
